--- a/src/less/bootstrap-tour.less
+++ b/src/less/bootstrap-tour.less
@@ -1,59 +1,62 @@
-.tour-backdrop {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1100;
-  background-color: #000;
-  opacity: 0.8;
-  filter: alpha(opacity=80);
-}
-
-.tour-step-backdrop {
-  position: relative;
-  z-index: 1101;
-  
-  > td {
-    position: relative;
-    z-index: 1101;
-  }
-}
-
-.tour-step-background {
-  position: absolute !important;
-  z-index: 1100;
-  background: inherit;
-  border-radius: 6px;
-}
-
-.popover[class*="tour-"] {
-  z-index: 1100;
-
-  .popover-navigation {
-    padding: 9px 14px;
-
-    *[data-role="end"] {
-      float: right;
+.olly-v1 {
+    .tour-backdrop {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 1100;
+      background-color: #000;
+      opacity: 0.8;
+      filter: alpha(opacity=80);
     }
 
-    *[data-role="prev"],
-    *[data-role="next"],
-    *[data-role="end"] {
-      cursor: pointer;
-
-      &.disabled {
-        cursor: default;
+    .tour-step-backdrop {
+      position: relative;
+      z-index: 1101;
+      
+      > td {
+        position: relative;
+        z-index: 1101;
       }
     }
-  }
 
-  &.orphan {
-    position: fixed;
-    margin-top: 0;
-
-    .arrow {
-      display: none;
+    .tour-step-background {
+      position: absolute !important;
+      z-index: 1100;
+      background: inherit;
+      border-radius: 6px;
     }
-  }
+
+    .popover[class*="tour-"] {
+      z-index: 1100;
+      position: fixed;
+
+      .popover-navigation {
+        padding: 9px 14px;
+
+        *[data-role="end"] {
+          float: right;
+        }
+
+        *[data-role="prev"],
+        *[data-role="next"],
+        *[data-role="end"] {
+          cursor: pointer;
+
+          &.disabled {
+            cursor: default;
+          }
+        }
+      }
+
+      &.orphan {
+        position: fixed;
+        margin-top: 0;
+
+        .arrow {
+          display: none;
+        }
+      }
+    }
 }
